--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,13 @@ address {
   font-style: normal;
 }
 
+img {
+  display: block;
+}
+
+
 .container {
-  width: 1470px;
+  width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
@@ -69,9 +74,21 @@ address {
   color: #434455;
 }
 
+.visually-hidden{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
+  
 }
 
 .header-container {
@@ -80,6 +97,8 @@ address {
 }
 
 .header-navigation {
+  padding-top: 24px;
+  padding-bottom: 24px;
   display: flex;
   align-items: center;
 }
@@ -102,7 +121,7 @@ address {
 
 .header-menu-list {
   display: flex;
-  gap: 32px;
+  gap: 40px;
 }
 
 .header-menu-link {
@@ -145,8 +164,8 @@ address {
 .hero {
   background: #2e2f42;
   border: 1px solid #000;
-  padding-top: 180px;
-  padding-bottom: 196px;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .hero-title {
   font-size: 56px;
@@ -180,7 +199,7 @@ address {
 }
 
 .about {
-  padding: 124px 156px 124px 156px;
+  padding: 120px 156px 120px 156px;
 }
 .about-list {
   display: flex;
@@ -188,7 +207,7 @@ address {
 }
 
 .about-item {
-  max-width: calc((100% - 24px * 3) / 3);
+  max-width: calc((100% - 72px) / 4);
   margin: 0 auto;
 }
 
@@ -227,20 +246,32 @@ address {
   background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
-  width: calc((100% - 24px * 3) / 4);
+  width: 264px
   height: 380px;
 }
 
 .team-item-image {
-  margin-bottom: 32px;
+  width: 264px;
+  height: 260px;
+  margin: 0 auto;
 }
 
 .team-item-person {
   margin-bottom: 8px;
+  text-align: center;
+}
+
+.team-item-profession{
+  text-align: center;
+}
+
+.team-describe{
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 .portfolio {
-  padding-top: 116px;
+  padding-top: 120px;
   padding-bottom: 120px;
 }
 
@@ -269,9 +300,7 @@ address {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding: 32px 16px;
 }
 
 .portfolio-item-subtitle {
@@ -286,7 +315,7 @@ address {
   background: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
-  padding-left: 156px;
+
 }
 .footer-logo {
   font-family: "Raleway", sans-serif;
