--- a/css/styles.css
+++ b/css/styles.css
@@ -76,8 +76,6 @@ img {
 
 .header {
   border-bottom: 1px solid #e7e9fc;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .header-container {
@@ -99,10 +97,17 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
   margin-right: 76px;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-logo .accent {
   color: #2e2f42;
+}
+
+.header-menu-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-menu-list {
@@ -111,6 +116,7 @@ img {
 }
 
 .header-menu-link {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -133,6 +139,11 @@ img {
 .header-address-list {
   display: flex;
   gap: 40px;
+}
+
+.header-address-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-address-link {
